<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ManagerChangePassword">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="10dp"
            android:background="#00000000"
            android:contentDescription="..."
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_button"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center|left"
            android:layout_marginLeft="40dp"
            android:gravity="top"
            android:text="Đổi mật khẩu"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

    <EditText
        android:id="@+id/enterOldPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="25dp"
        android:hint="Nhập mật khẩu cũ"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enterNewPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="25dp"
        android:hint="Nhập mật khẩu mới"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enterNewPasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="25dp"
        android:hint="Xác nhận mật khẩu mới"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/confirmChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="312dp"
        android:gravity="center"
        android:text="Xác nhận"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>