<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.chat.ChatActivity"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/title_activity_chat"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/layoutChatbox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_message_receive" />

        <LinearLayout
            android:id="@+id/layoutChatbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/background_input_message"
                android:hint="Bạn cần giúp gì?"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="6"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSendMessage"
                android:layout_gravity="center"
                android:src="@drawable/ic_send_message"
                app:tint="@color/blue"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
