...

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/editName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/editPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/editEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:orientation="horizontal">
                            <EditText
                                android:id="@+id/edit_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <ImageView
                                android:id="@+id/hide_password_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
                                    android:inputType="none"
                                    android:textSize="16sp"
                                    android:id="@+id/editBirthDate"/>
                            </com.google.android.material.textfield.TextInputLayout>

...
                                    android:inputType="none"
                                    android:textSize="16sp"
                                    android:id="@+id/edit_sex"/>
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>
...

                            <AutoCompleteTextView
                                android:id="@+id/edit_region"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...
                            android:minHeight="48dp">
                            <AutoCompleteTextView
                                android:id="@+id/edit_favorite"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/checkBox"
                    android:minWidth="22dp"/>
                <TextView
...
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
...
                android:text="ĐĂNG KÝ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/register" android:backgroundTint="@color/softPink"
                android:layout_marginStart="40dp" android:layout_marginEnd="40dp" android:layout_marginTop="30dp"
                android:textSize="18sp" android:padding="12dp" android:textColor="#000000"
...
